--- a/package.json
+++ b/package.json
@@ -8,16 +8,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "lerna": "lerna publish"
+    "lerna": "lerna publish",
+    "clean": "lerna clean",
+    "build:prod": "cross-env NODE_ENV=production rollup -c",
+    "build:dev": "cross-env NODE_ENV=development rollup -c",
+    "plop": "plop"
   },
   "keywords": [],
   "author": "noodlesfly",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.18.5",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.3.0",
     "@storybook/addon-actions": "^6.5.9",
     "@storybook/addon-essentials": "^6.5.9",
     "@storybook/addon-interactions": "^6.5.9",
@@ -26,8 +32,20 @@
     "@storybook/manager-webpack4": "^6.5.9",
     "@storybook/testing-library": "0.0.13",
     "@storybook/vue": "^6.5.9",
+    "@vue/test-utils": "1.0.3",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "26.2.2",
     "babel-loader": "^8.2.5",
+    "cross-env": "^7.0.3",
+    "jest": "26.2.2",
     "lerna": "^5.1.4",
+    "plop": "^3.1.1",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.75.6",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-vue": "5.1.9",
+    "vue-jest": "3.0.6",
     "vue-loader": "^15.9.8",
     "vue-template-compiler": "2.6.11"
   },
