--- a/packages/form/package.json
+++ b/packages/form/package.json
@@ -13,5 +13,6 @@
   "license": "MIT",
   "dependencies": {
     "lodash": "4"
-  }
+  },
+  "gitHead": "59cbaa0f8de2b6e6896d1071907e6b0336b16199"
 }
