--- a/packages/alink/package.json
+++ b/packages/alink/package.json
@@ -7,7 +7,8 @@
   "author": "noodlesfly",
   "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "del": "rimraf dist"
   },
   "keywords": []
 }
